https://github.com/trustoverip/ctwg-mrg-gen/issues/2
Write the MRG to the glossary dir path specified in the SAF rather than root

Signed-off-by: Sid Haniff <syed_haniff@hotmail.com>